# ansible-linux-first-setup

./: .yamllint  README.md  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  molecule.yml
molecule/default/: converge.yml  molecule.yml
molecule/vagrant/: converge.yml  molecule.yml
molecule/vagrant/roles/test_project/tasks/: main.yml  test_devtools.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: main.yml  setup-Debian.yml
roles/oh-my-zsh/defaults/: main.yml
roles/oh-my-zsh/handlers/: main.yml
roles/oh-my-zsh/tasks/: install.yml
roles/oh-my-zsh/templates/: zshrc.j2
roles/software/meta/: main.yml
roles/software/tasks/: main.yml
roles/software/tasks/Debian/: devtools.yml  main.yml  node.yml
roles/software/templates/: .p10k.zsh.j2  .zshrc.j2
