[tool.poetry]
name = "setup_computer"
version = "0.1.0"
description = ""
authors = ["Marlon Baptista de Quadros <marlonbquadros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.8.0"
molecule = "^3.6.1"
molecule-docker = "^1.1.0"
molecule-vagrant = "^1.0.0"
python-vagrant = "^1.0.0"
yamllint = "^1.26.3"
ansible-lint = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
